--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="application_name">Application name</string>
+    <string name="create_an_account">Create an account</string>
+    <string name="password_confirm">Password confrim</string>
 </resources>
