--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="application_name">Application name</string>
     <string name="create_an_account">Create an account</string>
     <string name="password_confirm">Password confrim</string>
+    <string name="breakfast_menu">Breakfast</string>
+    <string name="lunch_menu">Lunch</string>
+    <string name="dinner_menu">Dinner</string>
+    <string name="own_ideas_menu">Own ideas</string>
+    <string name="no_login_enter">Countinue without sign in</string>
 </resources>
